--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbd876">  <td>18/07/12 09:58:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:selenium.RunTest@7cd62f43]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="fbd876">  <td>18/07/12 12:23:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:selenium.RunTest@7cd62f43]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/07/12 09:58:14</td>   <td>343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:selenium.RunTest@7cd62f43]">feature</td> 
+<tr bgcolor="fbd876">  <td>18/07/12 12:23:41</td>   <td>301</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:selenium.RunTest@7cd62f43]">feature</td> 
   <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/07/12 09:58:36</td>   <td>22851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:selenium.RunTest@7cd62f43]">feature</td> 
+<tr bgcolor="fbd876">  <td>18/07/12 12:23:54</td>   <td>13526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:selenium.RunTest@7cd62f43]">feature</td> 
   <td>main@701141022</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>18/07/12 09:58:46</td>   <td>32571</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:selenium.RunTest@7cd62f43]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="fbd876">  <td>18/07/12 12:24:15</td>   <td>34085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:selenium.RunTest@7cd62f43]">feature</td> 
+  <td>main@701141022</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>18/07/12 12:24:19</td>   <td>38510</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:selenium.RunTest@7cd62f43]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@701141022</td>   <td></td> </tr>
 </table>
